docs: update API docs
